Add tests for fits using various cost functions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ before_install:
   - pip install --upgrade numdifftools
   - pip install --upgrade PyYAML
   - pip install --upgrade unittest2
+  - pip install --upgrade parameterized
 
   # output python version to log
   - python --version
